--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/home/edison/.netbeans/8.0.2/build.properties
+file.reference.postgresql-9.0-801.jdbc3.jar=/Users/natha9404/Documents/Bases de Datos/PROYECTO/proyectobd-tarjetas-buses/dist/lib/postgresql-9.2-1002.jdbc4.jar
+user.properties.file=/Users/natha9404/Library/Application Support/NetBeans/8.1/build.properties
