--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.0-801.jdbc3.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.iText.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
