--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyectobd.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.iText-5.0.5.jar=/home/edison/Documentos/univalle/2015-II/DESARROLLO/Desarrollo/Desarrollo/iText-5.0.5.jar
 file.reference.postgresql-9.0-801.jdbc3.jar=D:\\DOCUMENTOS PUBLICOS AGOSTO 2014\\Univalle\\BASES DE DATOS\\ejemploDAOPattern\\ejemploDAOPattern\\postgresql-9.0-801.jdbc3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.0-801.jdbc3.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.iText.classpath}
+    ${libs.iText.classpath}:\
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
