--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/proyectobd.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-5.0.5.jar=/home/edison/Documentos/univalle/2015-II/DESARROLLO/Desarrollo/Desarrollo/iText-5.0.5.jar
+file.reference.iText-5.0.5.jar-1=/home/edison/Documentos/univalle/2015-II/DESARROLLO/Desarrollo/Desarrollo/iText-5.0.5.jar
 file.reference.postgresql-9.0-801.jdbc3.jar=D:\\DOCUMENTOS PUBLICOS AGOSTO 2014\\Univalle\\BASES DE DATOS\\ejemploDAOPattern\\ejemploDAOPattern\\postgresql-9.0-801.jdbc3.jar
 includes=**
 jar.compress=false
@@ -35,7 +36,8 @@ javac.classpath=\
     ${file.reference.postgresql-9.0-801.jdbc3.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.iText.classpath}:\
-    ${file.reference.iText-5.0.5.jar}
+    ${file.reference.iText-5.0.5.jar}:\
+    ${file.reference.iText-5.0.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
