--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 compile.on.save=true
 file.reference.iText-5.0.5.jar=/Users/natha9404/Documents/Bases de Datos/PROYECTO/proyectobd-tarjetas-buses/iText-5.0.5.jar
+file.reference.iText-5.0.5.jar-1=/Users/natha9404/Documents/Bases de Datos/PROYECTO/proyectobd-tarjetas-buses/iText-5.0.5.jar
 file.reference.postgresql-9.0-801.jdbc3.jar=/Users/natha9404/Documents/Bases de Datos/PROYECTO/proyectobd-tarjetas-buses/dist/lib/postgresql-9.2-1002.jdbc4.jar
-user.properties.file=/home/edison/.netbeans/8.0.2/build.properties
+user.properties.file=/Users/natha9404/Library/Application Support/NetBeans/8.1/build.properties
